...
  "select_a_vendor_first": "Select a vendor first",
  "select_all_visible": "Select all visible",
  "select_date": "Select date",
  "select_payment": "Select a payment to refund",
  "select_time": "Select time",
  "selected_of": ":selected of :total selected",
  "self_hosted": "Self-Hosted",
  "send_and_receive_email": "Send and receive email",
  "send_einvoice": "Send e-invoice",
  "sent_einvoice": "E-invoice queued for delivery",
  "sent_invitation_email": "Invitation sent to :email",
  "sent_now_recurring_invoice": "Successfully sent recurring invoice",
  "sent_now_recurring_invoices": "Successfully sent :count recurring invoices",
...
